UI fixes for elastic profiles page (#6172)
* UI fixes for elastic profiles page
* Change in key-value pair padding for better alignment.
* Add a custom collapsible element to show Cluster Profile details as the styles are very specific.
* Show plugin name instead of plugin id on cluster profile header panel.
* Truncate cluster profile ID.
* Header for elastic agent profiles.
* Change `New Elastic Agent Profile` button to `Elastic Agent Profile`.
* Display generic error message while saving a cluster profile.
* Show warning message on `Edit Cluster Profile Modal` for plugins not supporting Cluster Profiles.
* Extracted `ClusterProfileWidget` component from `ClusterProfilesWidget`:
  * To handle `Cluster Info` panel expansion state.
* Removed plugin ID as an editable field from elastic agent profile form.

--- a/server/webapp/WEB-INF/rails/webpack/views/pages/elastic_profiles/index.scss
+++ b/server/webapp/WEB-INF/rails/webpack/views/pages/elastic_profiles/index.scss
@@ -42,10 +42,10 @@ $disabled-text-color: #999;
   }
 }
 
-.plugin-name, .cluster-profile-name {
-  font-weight:  600;
-  font-size:    13px;
-  margin-right: 50px;
+.plugin-name {
+  font-weight: 600;
+  font-size:   13px;
+
   @media (min-width: $screen-md) {
     font-size: 12px;
   }
@@ -53,6 +53,12 @@ $disabled-text-color: #999;
     font-size: 15px;
   }
 
+}
+
+.cluster-profile-name {
+  overflow:      hidden;
+  text-overflow: ellipsis;
+  white-space:   nowrap;
 }
 
 .plugin-not-installed {
@@ -114,4 +120,45 @@ $disabled-text-color: #999;
 
 .cluster-profile-crud-actions {
   margin-left: 20px;
+}
+
+.cluster-profile-details-header {
+  @include icon-before($type: $fa-var-angle-right, $size: 16px);
+  position:     relative;
+  padding-left: 17px;
+  cursor:       pointer;
+  margin:       0 0 20px 0;
+
+  &:before {
+    position:   absolute;
+    left:       1px;
+    top:        1px;
+    margin:     0;
+    transition: $transition;
+  }
+
+  &.expanded {
+    &:before {
+      transform:  rotate(90deg);
+      transition: $transition;
+      left:       3px;
+      top:        2px;
+    }
+  }
+}
+
+.cluster-profile-details-container {
+  display: block;
+}
+
+.cluster-profile-details {
+  display: none;
+
+  &.expanded {
+    display: block;
+  }
+}
+
+.add-icon {
+  @include icon-before($type: $fa-var-plus);
 }
